fix: logo z-index line

--- a/src/components/header/logo/Logo.module.scss
+++ b/src/components/header/logo/Logo.module.scss
@@ -36,7 +36,7 @@
 
 .logo_text_header {
   position: relative;
-  z-index: 10;
+  z-index: 2;
 }
 
 .logo_text_underline {
